ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hellohenry
spec:
  backend:
    serviceName: hellohenry
    servicePort: 8080
